Nowe sekcje domyślnie ukryte

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         </form>
       </section>
 
-      <section id="wizyta_szczegoly">
+      <section id="wizyta_szczegoly"hidden>
         <div class="srodek">
           <h2 class="wysrodkuj">Szczegóły</h2>
           <span class="spread" >
@@ -282,7 +282,7 @@
           </div>
         </div>
       </section>
-      <section id="dodaj_wizyta">
+      <section id="dodaj_wizyta" hidden>
         <div class="srodek">
           <h2 class="wysrodkuj">Nowa wizyta</h2>
           <span class="spread" >
