Uaktualnienie nazw elementów

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
             </tbody>
           </table>
           <span>
-            <button id="btn_dodaj_wizyta" type="button">Nowa wizyta</button>
-            <button id="btn_powrot_kalendarz" type="button">Powrót</button>
+            <button id="btn_dodaj_wizyte" type="button">Nowa wizyta</button>
+            <button id="btn_powrot_wizyty" type="button">Powrót</button>
           </span>
         </div>
       </section>
@@ -260,49 +260,44 @@
         <div class="srodek">
           <h2 class="wysrodkuj">Szczegóły</h2>
           <span class="spread" >
-            <label for="wizyta_data">Data:</label>
-            <input id="wizyta_data" type="datetime-local">
+            <label for="wizyta_termin">Termin:</label>
+            <input id="wizyta_termin" type="datetime-local">
           </span>
           <span class="spread" >
             <label for="wizyta_klient">Klient:</label>
-            <select id="wizyta_klient">
-              <option value="0">Wybierz klienta</option>
-            </select>
+            <input id="wizyta_klient" type="text" disabled>
           </span>
           <span class="spread" >
             <label for="wizyta_zabieg">Zabieg:</label>
-            <select id="wizyta_zabieg">
-              <option value="0">Wybierz zabieg</option>
-            </select>
+            <input id="wizyta_zabieg" type="text" disabled>
           </span>
           <div>
-            <button id="btn_zapisz_wizyta" type="button">Zapisz</button>
-            <button id="btn_usun_wizyta" type="button">Usuń</button>
-            <button id="btn_powrot_szczegoly_wizyta" type="button">Powrót</button>
+            <button id="btn_usun_wizyte" type="button">Usuń</button>
+            <button id="btn_powrot_szczegoly_wizyty" type="button">Powrót</button>
           </div>
         </div>
       </section>
-      <section id="dodaj_wizyta" hidden>
+      <section id="dodaj_wizyte" hidden>
         <div class="srodek">
           <h2 class="wysrodkuj">Nowa wizyta</h2>
           <span class="spread" >
             <label for="nowa_wizyta_termin">Termin:</label>
-            <input id="nowa_wizyta_termin" type="datetime-local">
+            <input id="nowa_wizyta_termin" type="datetime-local" required>
           </span>
           <span class="spread" >
             <label for="nowa_wizyta_klient">Klient:</label>
-            <select id="nowa_wizyta_klient">
+            <select id="nowa_wizyta_klient" required>
               <option value="0">Wybierz klienta</option>
             </select>
           </span>
           <span class="spread" >
             <label for="nowa_wizyta_zabieg">Zabieg:</label>
-            <select id="nowa_wizyta_zabieg">
+            <select id="nowa_wizyta_zabieg" required>
               <option value="0">Wybierz zabieg</option>
             </select>
           </span>
           <div>
-            <button id="btn_zapisz_nowa_wizyta" type="button">Zapisz</button>
+            <button id="btn_zapisz_wizyte" type="button">Zapisz</button>
             <button id="btn_powrot_nowa_wizyta" type="button">Powrót</button>
           </div>
         </div>
