--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       </section>
 
       <section id="kalendarz" hidden>
-        <h2 class="wysrodkuj"> KALENDARZ</h2>
+        <h2 class="wysrodkuj"> LISTA WIZYT</h2>
         <div class="srodek">
           <table>
             <thead>
