--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="buttons">
           <button id="btn_klienci" type="button">KLIENCI</button> 
           <button id="btn_zabiegi" type="button">ZABIEGI</button>
-          <button id="btn_kalendarz" type="button">KALENDARZ</button>
+          <button id="btn_kalendarz" type="button">LISTA WIZYT</button>
           <button id="btn_ustawienia" type="button">USTAWIENIA</button>
         </div>
       </section>
@@ -161,7 +161,7 @@
             <label for="haslo_do_DB">Kod dostępu do bazy danych:</label>
             <input type="password" id="haslo_do_DB">
           </span>
-          <button id="btn_powrot_ustawienia" type="button">Powrót</button>
+          <button id="btn_powrot_ustawienia" type="button">OK</button>
         </div>
       </section>
 
