Dodanie pobranie danych podczas startu aplikacji

--- a/index.html
+++ b/index.html
@@ -328,6 +328,9 @@
       window.addEventListener("load", () => 
       { 
         initializujStrone();
+        pobierzKlientow();
+        pobierzZabiegi();
+        pobierzWizyty();
       })
     </script>
   </body>
