Mała poprawka nazw

--- a/index.html
+++ b/index.html
@@ -328,9 +328,9 @@
       window.addEventListener("load", () => 
       { 
         initializujStrone();
-        pobierzKlientow();
-        pobierzZabiegi();
-        pobierzWizyty();
+        pobierzListeKlientow();
+        pobierzListeZabiegow();
+        pobierzListeWizyt();
       })
     </script>
   </body>
