--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
       <section id="klient_szczegoly" hidden>
         <div class="srodek">
-          <h2 class="wysrodkuj">Szczegóły</h2>
+          <h2 class="wysrodkuj">Dane klienta</h2>
           <span class="spread" >
             <label for="szczegoly_imie">Imię:</label>
             <input id="szczegoly_imie" type="text">
@@ -212,7 +212,7 @@
       </section>
       <section id="zabieg_szczegoly" hidden>
         <div class="srodek">
-          <h2 class="wysrodkuj">Szczegóły</h2>
+          <h2 class="wysrodkuj">Szczegóły zabiegu</h2>
           <span class="spread" >
             <label for="szczegoly_nazwa">Nazwa:</label>
             <input id="szczegoly_nazwa" type="text">
@@ -258,7 +258,7 @@
 
       <section id="wizyta_szczegoly"hidden>
         <div class="srodek">
-          <h2 class="wysrodkuj">Szczegóły</h2>
+          <h2 class="wysrodkuj">Szczegóły wizyty</h2>
           <span class="spread" >
             <label for="wizyta_termin">Termin:</label>
             <input id="wizyta_termin" type="datetime-local">
