Drobne stylowanie głównych elementów

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Aplikacja wielowarstwowa</title>
     <style>
+      body {  
+        display: flex;
+        flex-direction: column;
+        min-height: 100dvh;
+      }
+      main {
+        flex: 1;
+      }
       .wysrodkuj {
         display: flex;
         flex-direction: row;
